k8s/front/front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: explana-client-svc
spec:
  type: ClusterIP
  selector:
    app: explana-client
  ports:
  - port: 80
    targetPort: 8080
